--- a/src/output.css
+++ b/src/output.css
@@ -545,9 +545,6 @@
       max-width: 96rem;
     }
   }
-  .m-auto {
-    margin: auto;
-  }
   .mx-auto {
     margin-inline: auto;
   }
@@ -589,6 +586,9 @@
   }
   .w-12 {
     width: calc(var(--spacing) * 12);
+  }
+  .w-auto {
+    width: auto;
   }
   .w-full {
     width: 100%;
@@ -646,23 +646,9 @@
   .rounded-sm {
     border-radius: var(--radius-sm);
   }
-  .rounded-b-sm {
-    border-bottom-right-radius: var(--radius-sm);
-    border-bottom-left-radius: var(--radius-sm);
-  }
   .border {
     border-style: var(--tw-border-style);
     border-width: 1px;
-  }
-  .border-2 {
-    border-style: var(--tw-border-style);
-    border-width: 2px;
-  }
-  .border-violet-300 {
-    border-color: var(--color-violet-300);
-  }
-  .border-violet-400 {
-    border-color: var(--color-violet-400);
   }
   .bg-gray-700 {
     background-color: var(--color-gray-700);
@@ -676,14 +662,6 @@
   .bg-gradient-to-r {
     --tw-gradient-position: to right in oklab,;
     background-image: linear-gradient(var(--tw-gradient-stops));
-  }
-  .from-blue-400 {
-    --tw-gradient-from: var(--color-blue-400);
-    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position,) var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
-  }
-  .from-red-500 {
-    --tw-gradient-from: var(--color-red-500);
-    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position,) var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
   }
   .from-violet-300 {
     --tw-gradient-from: var(--color-violet-300);
@@ -706,77 +684,8 @@
     --tw-gradient-via-stops: var(--tw-gradient-position,) var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-via) var(--tw-gradient-via-position), var(--tw-gradient-to) var(--tw-gradient-to-position);
     --tw-gradient-stops: var(--tw-gradient-via-stops);
   }
-  .via-blue-400 {
-    --tw-gradient-via: var(--color-blue-400);
-    --tw-gradient-via-stops: var(--tw-gradient-position,) var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-via) var(--tw-gradient-via-position), var(--tw-gradient-to) var(--tw-gradient-to-position);
-    --tw-gradient-stops: var(--tw-gradient-via-stops);
-  }
-  .via-red-200 {
-    --tw-gradient-via: var(--color-red-200);
-    --tw-gradient-via-stops: var(--tw-gradient-position,) var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-via) var(--tw-gradient-via-position), var(--tw-gradient-to) var(--tw-gradient-to-position);
-    --tw-gradient-stops: var(--tw-gradient-via-stops);
-  }
-  .via-red-300 {
-    --tw-gradient-via: var(--color-red-300);
-    --tw-gradient-via-stops: var(--tw-gradient-position,) var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-via) var(--tw-gradient-via-position), var(--tw-gradient-to) var(--tw-gradient-to-position);
-    --tw-gradient-stops: var(--tw-gradient-via-stops);
-  }
-  .via-red-400 {
-    --tw-gradient-via: var(--color-red-400);
-    --tw-gradient-via-stops: var(--tw-gradient-position,) var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-via) var(--tw-gradient-via-position), var(--tw-gradient-to) var(--tw-gradient-to-position);
-    --tw-gradient-stops: var(--tw-gradient-via-stops);
-  }
-  .via-violet-300 {
-    --tw-gradient-via: var(--color-violet-300);
-    --tw-gradient-via-stops: var(--tw-gradient-position,) var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-via) var(--tw-gradient-via-position), var(--tw-gradient-to) var(--tw-gradient-to-position);
-    --tw-gradient-stops: var(--tw-gradient-via-stops);
-  }
-  .via-violet-400 {
-    --tw-gradient-via: var(--color-violet-400);
-    --tw-gradient-via-stops: var(--tw-gradient-position,) var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-via) var(--tw-gradient-via-position), var(--tw-gradient-to) var(--tw-gradient-to-position);
-    --tw-gradient-stops: var(--tw-gradient-via-stops);
-  }
-  .via-yellow-400 {
-    --tw-gradient-via: var(--color-yellow-400);
-    --tw-gradient-via-stops: var(--tw-gradient-position,) var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-via) var(--tw-gradient-via-position), var(--tw-gradient-to) var(--tw-gradient-to-position);
-    --tw-gradient-stops: var(--tw-gradient-via-stops);
-  }
-  .via-yellow-500 {
-    --tw-gradient-via: var(--color-yellow-500);
-    --tw-gradient-via-stops: var(--tw-gradient-position,) var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-via) var(--tw-gradient-via-position), var(--tw-gradient-to) var(--tw-gradient-to-position);
-    --tw-gradient-stops: var(--tw-gradient-via-stops);
-  }
-  .via-zinc-100 {
-    --tw-gradient-via: var(--color-zinc-100);
-    --tw-gradient-via-stops: var(--tw-gradient-position,) var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-via) var(--tw-gradient-via-position), var(--tw-gradient-to) var(--tw-gradient-to-position);
-    --tw-gradient-stops: var(--tw-gradient-via-stops);
-  }
-  .via-zinc-300 {
-    --tw-gradient-via: var(--color-zinc-300);
-    --tw-gradient-via-stops: var(--tw-gradient-position,) var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-via) var(--tw-gradient-via-position), var(--tw-gradient-to) var(--tw-gradient-to-position);
-    --tw-gradient-stops: var(--tw-gradient-via-stops);
-  }
-  .via-50\% {
-    --tw-gradient-via-position: 50%;
-  }
-  .to-blue-400 {
-    --tw-gradient-to: var(--color-blue-400);
-    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position,) var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
-  }
-  .to-blue-500 {
-    --tw-gradient-to: var(--color-blue-500);
-    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position,) var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
-  }
-  .to-violet-300 {
-    --tw-gradient-to: var(--color-violet-300);
-    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position,) var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
-  }
   .to-violet-400 {
     --tw-gradient-to: var(--color-violet-400);
-    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position,) var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
-  }
-  .to-yellow-100 {
-    --tw-gradient-to: var(--color-yellow-100);
     --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position,) var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
   }
   .to-yellow-200 {
@@ -787,21 +696,8 @@
     --tw-gradient-to: var(--color-yellow-300);
     --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position,) var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
   }
-  .to-yellow-400 {
-    --tw-gradient-to: var(--color-yellow-400);
-    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position,) var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
-  }
   .bg-cover {
     background-size: cover;
-  }
-  .bg-clip-border {
-    background-clip: border-box;
-  }
-  .bg-clip-content {
-    background-clip: content-box;
-  }
-  .bg-clip-padding {
-    background-clip: padding-box;
   }
   .bg-clip-text {
     background-clip: text;
@@ -836,12 +732,6 @@
   .text-center {
     text-align: center;
   }
-  .align-middle {
-    vertical-align: middle;
-  }
-  .align-text-bottom {
-    vertical-align: text-bottom;
-  }
   .text-2xl {
     font-size: var(--text-2xl);
     line-height: var(--tw-leading, var(--text-2xl--line-height));
@@ -866,10 +756,6 @@
     --tw-font-weight: var(--font-weight-extrabold);
     font-weight: var(--font-weight-extrabold);
   }
-  .font-light {
-    --tw-font-weight: var(--font-weight-light);
-    font-weight: var(--font-weight-light);
-  }
   .font-medium {
     --tw-font-weight: var(--font-weight-medium);
     font-weight: var(--font-weight-medium);
@@ -880,9 +766,6 @@
   }
   .text-blue-300 {
     color: var(--color-blue-300);
-  }
-  .text-blue-400 {
-    color: var(--color-blue-400);
   }
   .text-transparent {
     color: transparent;
@@ -905,9 +788,6 @@
   .text-zinc-500 {
     color: var(--color-zinc-500);
   }
-  .text-zinc-700 {
-    color: var(--color-zinc-700);
-  }
   .text-zinc-800 {
     color: var(--color-zinc-800);
   }
@@ -924,63 +804,10 @@
     outline-style: var(--tw-outline-style);
     outline-width: 1px;
   }
-  .hover\:rounded-2xl {
-    &:hover {
-      @media (hover: hover) {
-        border-radius: var(--radius-2xl);
-      }
-    }
-  }
   .hover\:rounded-full {
     &:hover {
       @media (hover: hover) {
         border-radius: calc(infinity * 1px);
-      }
-    }
-  }
-  .hover\:border-2 {
-    &:hover {
-      @media (hover: hover) {
-        border-style: var(--tw-border-style);
-        border-width: 2px;
-      }
-    }
-  }
-  .hover\:border-8 {
-    &:hover {
-      @media (hover: hover) {
-        border-style: var(--tw-border-style);
-        border-width: 8px;
-      }
-    }
-  }
-  .hover\:border-r-2 {
-    &:hover {
-      @media (hover: hover) {
-        border-right-style: var(--tw-border-style);
-        border-right-width: 2px;
-      }
-    }
-  }
-  .hover\:border-b-4 {
-    &:hover {
-      @media (hover: hover) {
-        border-bottom-style: var(--tw-border-style);
-        border-bottom-width: 4px;
-      }
-    }
-  }
-  .hover\:border-violet-300 {
-    &:hover {
-      @media (hover: hover) {
-        border-color: var(--color-violet-300);
-      }
-    }
-  }
-  .hover\:border-violet-400 {
-    &:hover {
-      @media (hover: hover) {
-        border-color: var(--color-violet-400);
       }
     }
   }
@@ -1007,22 +834,6 @@
       }
     }
   }
-  .hover\:from-red-300 {
-    &:hover {
-      @media (hover: hover) {
-        --tw-gradient-from: var(--color-red-300);
-        --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position,) var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
-      }
-    }
-  }
-  .hover\:from-red-500 {
-    &:hover {
-      @media (hover: hover) {
-        --tw-gradient-from: var(--color-red-500);
-        --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position,) var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
-      }
-    }
-  }
   .hover\:from-violet-300 {
     &:hover {
       @media (hover: hover) {
@@ -1031,26 +842,10 @@
       }
     }
   }
-  .hover\:from-violet-400 {
-    &:hover {
-      @media (hover: hover) {
-        --tw-gradient-from: var(--color-violet-400);
-        --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position,) var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
-      }
-    }
-  }
   .hover\:to-blue-300 {
     &:hover {
       @media (hover: hover) {
         --tw-gradient-to: var(--color-blue-300);
-        --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position,) var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
-      }
-    }
-  }
-  .hover\:to-blue-400 {
-    &:hover {
-      @media (hover: hover) {
-        --tw-gradient-to: var(--color-blue-400);
         --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position,) var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
       }
     }
@@ -1071,29 +866,6 @@
       }
     }
   }
-  .hover\:to-yellow-300 {
-    &:hover {
-      @media (hover: hover) {
-        --tw-gradient-to: var(--color-yellow-300);
-        --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position,) var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
-      }
-    }
-  }
-  .hover\:bg-clip-text {
-    &:hover {
-      @media (hover: hover) {
-        background-clip: text;
-      }
-    }
-  }
-  .hover\:font-light {
-    &:hover {
-      @media (hover: hover) {
-        --tw-font-weight: var(--font-weight-light);
-        font-weight: var(--font-weight-light);
-      }
-    }
-  }
   .hover\:text-blue-300 {
     &:hover {
       @media (hover: hover) {
@@ -1101,73 +873,24 @@
       }
     }
   }
-  .hover\:text-blue-400 {
+  .hover\:text-zinc-100\/15 {
     &:hover {
       @media (hover: hover) {
-        color: var(--color-blue-400);
+        color: color-mix(in oklab, var(--color-zinc-100) 15%, transparent);
       }
     }
   }
-  .hover\:text-rose-600 {
+  .hover\:text-zinc-100\/20 {
     &:hover {
       @media (hover: hover) {
-        color: var(--color-rose-600);
+        color: color-mix(in oklab, var(--color-zinc-100) 20%, transparent);
       }
     }
   }
-  .hover\:text-transparent {
+  .hover\:text-zinc-100\/25 {
     &:hover {
       @media (hover: hover) {
-        color: transparent;
-      }
-    }
-  }
-  .hover\:text-violet-300 {
-    &:hover {
-      @media (hover: hover) {
-        color: var(--color-violet-300);
-      }
-    }
-  }
-  .hover\:text-violet-300\/50 {
-    &:hover {
-      @media (hover: hover) {
-        color: color-mix(in oklab, var(--color-violet-300) 50%, transparent);
-      }
-    }
-  }
-  .hover\:text-violet-400 {
-    &:hover {
-      @media (hover: hover) {
-        color: var(--color-violet-400);
-      }
-    }
-  }
-  .hover\:text-violet-400\/2 {
-    &:hover {
-      @media (hover: hover) {
-        color: color-mix(in oklab, var(--color-violet-400) 2%, transparent);
-      }
-    }
-  }
-  .hover\:text-violet-400\/20 {
-    &:hover {
-      @media (hover: hover) {
-        color: color-mix(in oklab, var(--color-violet-400) 20%, transparent);
-      }
-    }
-  }
-  .hover\:text-zinc-100 {
-    &:hover {
-      @media (hover: hover) {
-        color: var(--color-zinc-100);
-      }
-    }
-  }
-  .hover\:text-zinc-100\/30 {
-    &:hover {
-      @media (hover: hover) {
-        color: color-mix(in oklab, var(--color-zinc-100) 30%, transparent);
+        color: color-mix(in oklab, var(--color-zinc-100) 25%, transparent);
       }
     }
   }
@@ -1178,52 +901,10 @@
       }
     }
   }
-  .hover\:text-zinc-100\/40 {
-    &:hover {
-      @media (hover: hover) {
-        color: color-mix(in oklab, var(--color-zinc-100) 40%, transparent);
-      }
-    }
-  }
   .hover\:text-zinc-100\/50 {
     &:hover {
       @media (hover: hover) {
         color: color-mix(in oklab, var(--color-zinc-100) 50%, transparent);
-      }
-    }
-  }
-  .hover\:text-zinc-100\/60 {
-    &:hover {
-      @media (hover: hover) {
-        color: color-mix(in oklab, var(--color-zinc-100) 60%, transparent);
-      }
-    }
-  }
-  .hover\:text-zinc-100\/70 {
-    &:hover {
-      @media (hover: hover) {
-        color: color-mix(in oklab, var(--color-zinc-100) 70%, transparent);
-      }
-    }
-  }
-  .hover\:text-zinc-800\/50 {
-    &:hover {
-      @media (hover: hover) {
-        color: color-mix(in oklab, var(--color-zinc-800) 50%, transparent);
-      }
-    }
-  }
-  .hover\:text-zinc-800\/90 {
-    &:hover {
-      @media (hover: hover) {
-        color: color-mix(in oklab, var(--color-zinc-800) 90%, transparent);
-      }
-    }
-  }
-  .hover\:text-zinc-800\/100 {
-    &:hover {
-      @media (hover: hover) {
-        color: color-mix(in oklab, var(--color-zinc-800) 100%, transparent);
       }
     }
   }
